# ===============================================================================
# PRAHO PLATFORM - PYTHON PROJECT CONFIGURATION
# ===============================================================================
# Managed with uv (https://docs.astral.sh/uv/) - See ADR-0013 for migration details

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praho-platform"
version = "0.18.0"
description = "PRAHO Platform - PRAHO Really Automates Hosting Operations"
authors = [
    {name = "PragmaticHost Development Team", email = "dev@pragmatichost.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["hosting", "praho platform", "billing", "web hosting", "django", "htmx", "tailwindcss", "platform"]
classifiers = [
    # Development Phase
    "Development Status :: 3 - Alpha",

    # Target Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",

    # Framework & Environment
    "Framework :: Django :: 5.2",
    "Environment :: Web Environment",
    "Environment :: Console",

    # License
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",

    # Topic Categories
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Communications :: Email",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",

    # Natural Language
    "Natural Language :: English",
    "Natural Language :: Romanian",
]

# ===============================================================================
# WORKSPACE DEPENDENCIES - Shared across all services
# ===============================================================================
# Core dependencies used by both platform and portal services
dependencies = [
    # Django framework
    "Django>=5.2,<5.3",
    "django-environ>=0.11.0",
    # API framework
    "djangorestframework>=3.14.0",
    # HTTP client
    "requests>=2.31.0",
    # Date/Time handling
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    # Environment management
    "python-dotenv>=1.0.0",
    "django-ipware>=7.0.1",
    "django-q2>=1.9.0",
    "lxml>=6.0.2",
]

# ===============================================================================
# DEPENDENCY GROUPS - Environment-specific packages
# ===============================================================================

[dependency-groups]
# Development tools - testing, linting, type checking
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "faker>=19.3.0",
    "mixer>=7.2.0",
    "tblib>=3.1.0",
    "pytest-playwright>=0.4.0",
    # Code quality
    "ruff>=0.8.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "django-stubs[compatible-mypy]>=4.2.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "lxml-stubs>=0.5.0",
    "types-bleach>=6.0.0",
    "types-psutil>=5.9.0",
    "types-paramiko>=3.4.0",
    "types-pytz>=2024.1.0",
    "types-qrcode>=7.4.0",
    "types-reportlab>=4.1.0",
    "pre-commit>=3.4.0",
    # Documentation
    "Sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    # Performance profiling
    "django-silk>=5.0.0",
    "memory-profiler>=0.61.0",
    # Debug tools
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "werkzeug>=2.3.0",
    "ipython>=8.15.0",
    "coverage>=7.3.0",
    "polib>=1.2.0",
]

# Production dependencies - server, monitoring, optimization
prod = [
    # Production WSGI server
    "gunicorn>=21.2.0",
    "gevent>=23.7.0",

    # Production database optimizations
    "django-cachalot>=2.6.0",

    # Monitoring & Performance
    "newrelic>=8.9.0",
    "datadog>=0.47.0",

    # Security enhancements
    "django-csp>=3.8.0",

    # Task queue production
    "supervisor>=4.2.0",

    # PDF generation
    "reportlab>=4.0.0",
    "weasyprint>=60.0",
]

# Platform-specific dependencies (database, auth, billing, etc.)
platform = [
    # Database
    "psycopg2-binary>=2.9.0",
    "dj-database-url>=2.1.0",

    # Authentication & Security
    "django-allauth>=0.57.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "argon2-cffi>=23.1.0",
    "django-ipware>=7.0.0",

    # API extras
    "django-filter>=23.0",
    "drf-spectacular>=0.26.0",
    "django-cors-headers>=4.3.0",

    # File handling & Storage
    "Pillow>=10.0.0",
    "django-storages>=1.14.0",
    "boto3>=1.28.0",

    # PDF Generation
    "reportlab>=3.6.0",

    # Payments
    "stripe>=6.0.0",

    # Email
    "django-ses>=3.5.0",

    # Background task processing
    "django-q2>=1.8.0",
    "croniter>=6.0.0",

    # Server provisioning & SSH
    "paramiko>=4.0.0",

    # Monitoring & Logging
    "sentry-sdk[django]>=1.32.0",
    "django-health-check>=3.17.0",

    # Romanian VAT/Legal compliance
    "xmltodict>=0.13.0",
    "lxml>=4.9.0",

    # Rate limiting (imported at module level in views)
    "django-ratelimit>=4.1.0",

    # Utilities
    "python-slugify>=8.0.0",
    "bleach>=6.0.0",
    "markdown>=3.5.0",
    "django-crispy-forms>=2.1.0",
    "crispy-tailwind>=0.5.0",
]

# Portal-specific dependencies (minimal, no database)
portal = [
    # Production server only - portal is lightweight
    "gunicorn>=21.2.0",

    # IP address detection (used in rate limiting middleware)
    "django-ipware>=7.0.0",

    # HTML sanitization (used in shared UI template tags)
    "bleach>=6.0.0",
]

# ===============================================================================
# UV WORKSPACE CONFIGURATION
# ===============================================================================

[tool.uv]
# Define this as a workspace root
package = false

[tool.uv.workspace]
# Workspace members - each service is a separate package
members = ["services/platform", "services/portal"]

[tool.uv.sources]
# Workspace member references
praho-platform-service = { workspace = true }
praho-portal-service = { workspace = true }

# ===============================================================================
# CODE QUALITY CONFIGURATION
# ===============================================================================

[tool.ruff]
# ===============================================================================
# PRAHO PLATFORM - STRATEGIC LINTING CONFIGURATION 🎯
# ===============================================================================
# Focus: Performance, Security, AI/LLM Readability, Business Impact
# Philosophy: Enforce what matters, ignore cosmetic preferences

line-length = 120  # Modern screens, but not strictly enforced
target-version = "py311"
exclude = [
    ".venv",
    ".venv-darwin",
    ".venv-linux",
    "migrations",
    "__pycache__",
    ".git",
    "static",
    "htmlcov",
    "node_modules",
    "media",
    "tests",
]

[tool.ruff.lint]
# ===============================================================================
# STRATEGIC RULE SELECTION - Business Impact Focus 🚀
# ===============================================================================

select = [
    # ✅ CRITICAL - Runtime Errors (ALWAYS ENFORCE)
    "E",      # pycodestyle errors (syntax, indentation)
    "F",      # Pyflakes (undefined names, unused imports)
    "W",      # pycodestyle warnings

    # ⚡ PERFORMANCE - O(N²) Detection & Optimization
    "PERF",   # Performance anti-patterns (NEW!)
    "C90",    # McCabe complexity (prevent spaghetti code)
    "PIE",    # flake8-pie (performance improvements)
    "SIM",    # flake8-simplify (simpler = faster + fewer bugs)

    # 🔒 SECURITY - WARNING ONLY (Manual Review Required)
    "S",      # bandit security issues (WARN, don't ignore)
    "B",      # flake8-bugbear (likely bugs)

    # 🐍 DJANGO EXCELLENCE
    "DJ",     # flake8-django (Django best practices)
    "A",      # flake8-builtins (prevent shadowing)

    # 🤖 AI/LLM READABILITY - Help Claude/Copilot
    "I",      # isort (organized imports)
    "N",      # pep8-naming (consistent naming)
    "UP",     # pyupgrade (modern Python syntax)
    "ANN",    # flake8-annotations (type hints for AI)

    # 📦 CODE QUALITY
    "C4",     # flake8-comprehensions
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
    "ERA",    # eradicate (remove commented code)

    # 🧹 MAINTENANCE
    "PL",     # Pylint subset (errors/warnings only)
]

# ===============================================================================
# STRATEGIC IGNORES - Focus on What Matters 🎨
# ===============================================================================

ignore = [
    # ❌ COSMETIC RULES (Don't Block Development)
    "E501",   # Line too long (modern screens handle 120+)
    "W291",   # Trailing whitespace (auto-fixable)
    "W293",   # Blank line with whitespace (cosmetic)

    # ❌ DEVELOPMENT HELPERS (Useful in Debug)
    "T201",   # print statements (useful for debugging)
    "T203",   # pprint statements

    # ❌ TEST-SPECIFIC ALLOWANCES
    "S101",   # Use of assert (standard in tests)
    # "S105", # Hardcoded password string - WARN EVERYWHERE
    # "S106", # Hardcoded password funcarg - WARN EVERYWHERE

    # ❌ DJANGO PATTERNS (Framework Conventions)
    "DTZ005", # timezone-naive datetime (Django handles this)
    "S104",   # Hardcoded bind all interfaces (dev server)
    "DJ008",  # Model meta ordering (style preference)
    "F405",   # undefined-local-with-import-star (Django settings pattern)

    # ❌ TYPE HINT EDGE CASES
    # "ANN101", # Missing type annotation for self (REMOVED IN NEWER RUFF)
    # "ANN102", # Missing type annotation for cls (REMOVED IN NEWER RUFF)
    "ANN401", # Dynamically typed expressions (Django magic)

    # ❌ TODO/FIXME COMMENTS (Development Process)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "FIX002", # Line contains TODO

    # ❌ QUOTE STYLE (Preference, Not Functional)
    "Q000",   # Single vs double quotes
    "COM812", # Trailing comma in Python 3.6+

    # ❌ DOCSTRING REQUIREMENTS (Important but not blocking)
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]

[tool.ruff.lint.per-file-ignores]
# ===============================================================================
# FILE-SPECIFIC RULE RELAXATION 📁
# ===============================================================================

# Test files - Focus on functionality over style
"test_*.py" = [
    "S101",     # Allow assert statements
    "S105", "S106", # Test credentials are acceptable
    "ANN",      # Skip type hints in tests
    "D",        # Skip docstrings in tests
    "PLR2004",  # Allow magic numbers in tests
    "B017",     # Allow pytest.raises() patterns
]
"tests/**/*.py" = [
    "S101", "ANN", "D", "PLR2004", "B017",
    "S105", "S106"  # Test credentials are acceptable
]

# Django management commands - Allow print statements and dev utilities
"manage.py" = ["T201", "T203"]
"**/management/commands/*.py" = [
    "T201", "T203",     # Print statements for progress
    "S602", "S603",     # Subprocess calls (dev utility)
    "S105", "S106"      # Development/test credentials in commands
]

# Development data generation - Allow development patterns
"**/management/commands/generate_sample_data.py" = [
    "T201", "T203",     # Print statements for progress
    "S105", "S106",     # Development credentials only
    "S311",             # Pseudo-random generators (sample data generation)
    "S602", "S603",     # Subprocess calls (dev utility)
    "PLR2004",          # Magic numbers (sample data)
    "ANN",              # Type hints (utility script)
    "F841"              # Unused variables (sample data creation)
]

# Audit event generation - Allow pseudo-random for test data
"**/management/commands/generate_audit_events.py" = [
    "T201", "T203",     # Print statements for progress
    "S311",             # Pseudo-random generators (test data generation)
    "PLR2004",          # Magic numbers (test data)
    "ANN"               # Type hints (utility script)
]

# GDPR compliance views - Allow complex functions for comprehensive compliance
"apps/audit/views.py" = [
    "PLR0915",          # Too many statements (GDPR compliance needs to be comprehensive)
]

# Migration files - Generated code, minimal linting
"**/migrations/*.py" = [
    "E501",     # Long lines acceptable
    "N806",     # Variable naming (Django generates these)
    "D",        # No docstrings needed
    "ANN",      # No type hints needed
    "RUF012",   # Django Migration class attributes are generated mutable lists
]

# Django app wiring and signal modules - runtime imports are intentional
"services/platform/apps/**/apps.py" = ["PLC0415", "I001"]
"services/platform/apps/billing/signals.py" = ["PLC0415"]
"services/platform/apps/customers/signals.py" = ["PLC0415"]
"services/platform/apps/customers/profile_service.py" = ["PLC0415"]
"services/platform/apps/orders/models.py" = ["PLC0415"]

# Signal wiring audit tests rely on local imports after app registry initialization
"services/platform/tests/audit/test_audit_e2e.py" = ["PLC0415"]
"services/platform/tests/audit/test_audit_signal_registration.py" = ["PLC0415"]

# Django model and form files - Meta inner class attributes are handled by metaclass processing
"**/models.py" = [
    "RUF012",      # Django model Meta attributes (ordering, indexes, etc.) don't need ClassVar
]
"**/forms.py" = [
    "RUF012",      # Django form Meta attributes (fields, widgets, etc.) don't need ClassVar
]

# Django admin files - Allow admin patterns and ClassVar conflicts
"**/admin.py" = [
    "RUF012",      # Django admin attributes don't need ClassVar (conflicts with MyPy)
    "PLR0911",     # Admin methods can have many returns
    "PLR0912",     # Admin methods can have many branches
    "S105", "S106" # Admin may have sample data
]

# Configuration files - Allow longer lines and flexible naming
"config/**/*.py" = ["E501", "N802", "N803"]
"**/settings/*.py" = ["E501", "N802"]

# Development and test settings - Allow fake credentials
"**/settings/dev.py" = [
    "E501", "N802", "N803",     # Development setting patterns
    "S105"                      # Development SECRET_KEY acceptable
]
"**/settings/test.py" = [
    "E501",             # Long lines acceptable
    "S105", "S106",     # Test credentials are acceptable
    "N802", "N803",     # Variable naming (settings pattern)
    "F403", "F405",     # Star imports (settings inheritance)
    "ANN",              # Type hints (configuration file)
    "ERA001"            # Commented code (configuration notes)
]

# Development scripts - Allow print statements and exception handling
"scripts/*.py" = [
    "T201", "T203",     # Print statements (progress reporting)
    "S602", "S603", "S607",  # Subprocess calls (utility scripts)
    "S110",             # Try-except-pass (resilient scripts)
    "E722",             # Bare except (error handling)
    "E402",             # Module import not at top (Django setup)
    "ANN",              # Type hints (utility scripts)
    "PLR0911", "PLR0912", "PLR0915", "PLR2004",  # Complexity (utility scripts)
    "PLW2901",          # Loop variable re-use (utility scripts)
    "SIM102",           # Nested if (readability preference in scripts)
    "C901",             # Complex functions (setup logic)
    "PLC0415",          # Import placement (conditional imports)
    "RUF001",           # Ambiguous unicode (info symbols)
    "ERA001",           # Commented code (development notes)
    "F403", "F405"      # Star imports (settings pattern)
]

# E2E test utilities - Allow test patterns
"tests/e2e/**/*.py" = [
    "ANN", "D",
    "S105", "S106",  # E2E test credentials are acceptable
    "F841",          # Unused variables in E2E setup
    "B007",          # Unused loop variables in test loops
]


# Example files - Allow demonstration patterns
"examples/**/*.py" = [
    "T201", "T203",     # Print statements for examples
    "F841",             # Unused variables in examples
    "ANN",              # Type hints not required in examples
    "D",                # Docstrings not required in examples
    "PLR2004",          # Magic numbers acceptable in examples
    "S105", "S106",     # Example credentials acceptable
]

# ===============================================================================
# FUNCTION-LEVEL IMPORTS - Strategic Per-Line Approach (ADR-0007) 🔗
# ===============================================================================
# Cross-app imports use per-line `# noqa: PLC0415` comments for surgical precision
# This maintains code quality while allowing strategic architectural patterns

[tool.ruff.lint.isort]
# ===============================================================================
# IMPORT ORGANIZATION - AI/LLM Friendly 🤖
# ===============================================================================
# Organized imports help both humans and AI understand code structure

known-first-party = ["apps", "config", "ui"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.mccabe]
# ===============================================================================
# COMPLEXITY CONTROL 🧠
# ===============================================================================
# Functions above this threshold need refactoring (O(N²) prevention)
max-complexity = 12  # Balanced: allows reasonable business logic

[tool.ruff.lint.flake8-bugbear]
# ===============================================================================
# BUG PREVENTION 🐛
# ===============================================================================
# Prevent common Python gotchas that cause production issues
extend-immutable-calls = [
    "django.utils.timezone.now",
    "django.conf.settings",
    "uuid.uuid4",
]

[tool.ruff.lint.flake8-annotations]
# ===============================================================================
# TYPE HINT STRATEGY 🏷️
# ===============================================================================
# Help AI/LLMs understand code intent through typing
mypy-init-return = true
suppress-dummy-args = true

# ===============================================================================
# TYPE CHECKING CONFIGURATION - REMOVED
# ===============================================================================
# MyPy has been removed from this project - see ADR-008 for details
# Type safety is now handled through:
# - Ruff type annotation linting (ANN rules)
# - Django 5.0+ built-in typing support
# - Comprehensive test coverage

# pyproject.toml — mypy
[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = false
mypy_path = ["services/platform/stubs"]
exclude = '(^|/)(migrations|static|media|htmlcov|node_modules|\.venv[^/]*)(/|$)'

# Guardrails
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
ignore_missing_imports = false
follow_imports = "normal"
no_implicit_reexport = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"
strict_settings = false

# --- Overrides ---

# Always ignore migrations
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "rest_framework.*",
    "django_q.*",
    "captcha.*",
    "faker.*",
    "prometheus_client.*",
    "anymail.*",
    "weasyprint",
    "ipware.*",
    "boto3.*",
    "django_ratelimit.*",
]
ignore_missing_imports = true

# Strict perimeter: business logic + managers/querysets
[[tool.mypy.overrides]]
module = [
  "core.*", "*.services.*", "*.repos.*", "*.gateways.*",
  "*.validators", "apps.billing.calculations",
  "*.managers", "*.querysets"
]
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

# Views/forms/serializers: keep checks, relax Django framework noise (ADR-0009)
[[tool.mypy.overrides]]
module = ["*.views", "*.forms", "*.serializers"]
disable_error_code = ["attr-defined", "misc", "assignment", "type-arg", "untyped-decorator"]

# API views: additional DRF-specific relaxations
[[tool.mypy.overrides]]
module = ["apps.api.*.views"]
disable_error_code = ["attr-defined", "misc", "no-untyped-def", "no-untyped-call", "untyped-decorator"]

# API serializers and core: DRF typing issues
[[tool.mypy.overrides]]
module = ["apps.api.*.serializers", "apps.api.core.*"]
disable_error_code = ["attr-defined", "misc", "no-any-return", "assignment"]

# Admin: low ROI → relax dynamic attrs (ADR-0009, ADR-0010)
[[tool.mypy.overrides]]
module = "apps.*.admin"
disable_error_code = ["attr-defined", "type-arg", "misc"]

# Sample data generation: test/development only, relax strictness
[[tool.mypy.overrides]]
module = "apps.common.management.commands.generate_sample_data"
disable_error_code = ["attr-defined", "misc", "assignment", "arg-type", "union-attr"]

# Task modules: async/queue operations, relax Celery/Django-Q typing
[[tool.mypy.overrides]]
module = ["apps.billing.tasks", "apps.users.tasks", "apps.orders.tasks", "apps.customers.tasks", "apps.provisioning.virtualmin_tasks", "apps.common.queue"]
disable_error_code = ["no-any-return", "misc", "return-value"]

# Common middleware: Django internals, relax dynamic attributes
[[tool.mypy.overrides]]
module = ["apps.common.middleware"]
disable_error_code = ["attr-defined", "misc", "assignment", "arg-type", "return-value"]

# Tests: allow friction-free typing (fix pattern to match nested test dirs)
[[tool.mypy.overrides]]
module = ["tests.*", "*.tests", "*.tests.*"]
disable_error_code = ["call-arg", "attr-defined", "no-any-return", "no-untyped-def", "no-untyped-call"]
disallow_untyped_defs = false
check_untyped_defs = true

# Settings & scripts are dynamic
[[tool.mypy.overrides]]
module = "config.settings.*"
disable_error_code = ["name-defined", "used-before-def", "attr-defined", "index", "operator"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Django-Q2 tasks: decorator magic
[[tool.mypy.overrides]]
module = "*.tasks"
disable_error_code = ["attr-defined"]

# Signal modules: dynamic signal registration + dynamic attrs (wildcard)
[[tool.mypy.overrides]]
module = "*.signals"
disable_error_code = ["attr-defined", "misc"]

# Infrastructure tasks/services: Ansible/paramiko/terraform dynamic attrs
[[tool.mypy.overrides]]
module = ["apps.infrastructure.tasks", "apps.infrastructure.deployment_service", "apps.infrastructure.ansible_service"]
disable_error_code = ["attr-defined", "misc", "no-any-return"]

# Models: ORM generics, ClassVar, dynamic attrs (ADR-0009)
[[tool.mypy.overrides]]
module = ["*.models", "*.abstract_models", "*.contact_models", "*.customer_models", "*.profile_models", "*.payment_models", "*.subscription_models"]
disable_error_code = ["type-arg", "misc", "assignment"]

# Subscription models: SettingsService returns Any for runtime settings, unreachable branch — pre-existing
[[tool.mypy.overrides]]
module = "apps.billing.subscription_models"
disable_error_code = ["no-any-return", "type-arg", "unreachable"]

# Customer models: ClassVar choices contain _StrPromise (gettext_lazy) — pre-existing
[[tool.mypy.overrides]]
module = ["apps.customers.contact_models", "apps.customers.customer_models", "apps.customers.profile_models"]
disable_error_code = ["misc", "assignment"]

# Credential vault: SettingsService.get_integer_setting returns Any — pre-existing
[[tool.mypy.overrides]]
module = "apps.common.credential_vault"
disable_error_code = ["no-any-return", "misc"]

# Users forms: cleaned_data dict access patterns — pre-existing
[[tool.mypy.overrides]]
module = "apps.users.forms"
disable_error_code = ["union-attr", "return-value", "misc"]

# ===============================================================================
# COVERAGE CONFIGURATION
# ===============================================================================

[tool.coverage.run]
# compliance requires high test coverage
source = ["apps", "config", "ui"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/.venv-*/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]
branch = true

[tool.coverage.report]
# Enforce 90% diff coverage for business compliance
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ===============================================================================
# DEVELOPMENT TOOLS
# ===============================================================================

[tool.djlint]
# Template linting for HTMX + Tailwind templates
profile = "django"
extension = "html"
indent = 2
max_line_length = 100
format_attribute_template_tags = true

[tool.djlint.rules]
# template standards
ignore = "H006,H030,H031"  # Allow img without alt, allow raw text, allow Meta tag

# ===============================================================================
# DEPLOYMENT CONFIGURATION
# ===============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "ui*"]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.md"]
